--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/Mark-LohseMiranda/employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
-    "express": "^4.17.1",
+    "inquirer": "^8.2.0",
     "mysql2": "^2.3.2"
   }
 }
